--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -12,3 +12,8 @@ jobs:
         run: |
           npm -v
           node -v
+      - name: python Command
+        run: | 
+          import platform
+          print(platform.processor())
+          shell: python
