--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,7 +13,7 @@ jobs:
               echo $GITHUB_SHA
               echo $GITHUB_REPOSITORY
               echo $GITHUB_WORKSPACE
-              echo {{ github.tokens }}
+              echo "${{ github.tokens }}"
         - name: Checkout
           uses: actions/checkout@v1
         - name: List Files After Checkout
