--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,9 +3,11 @@ name: Actions Workflow
 #on: [push, pull_request]
 
 on:
-  schedule:
-    - cron: "5 * * * *"
-    - cron: "6 * * * *"
+  repository_dispatch:
+    types: [build]
+  #schedule:
+  #  - cron: "5 * * * *"
+  #  - cron: "6 * * * *"
   #push:
   pull_request:
     types: [closed, assigned, opened, reopened]
