--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,7 +4,7 @@ name: Actions Workflow
 
 on:
   repository_dispatch:
-    types: [build]
+    #types: [build]
   #schedule:
   #  - cron: "5 * * * *"
   #  - cron: "6 * * * *"
