--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,7 +1,7 @@
 name: ENV variable
 on: push
 env: #custom env key
-  WF_ENV: Available to all jobs #CUSTOM env variable
+  WF_ENV: Available to all jobs 
 
 jobs:
   log-env:
