--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,20 +1,26 @@
 name: ENV variable
 on: push
-env: 
+env: #custom env variable key
   WF_ENV: Available to all jobs 
 
 jobs:
   log-env:
     runs-on: ubuntu-latest
+    env: 
+      JOB_ENV: Available to all steps
     steps:
       - name: Log Env Variables
+        env:
+          STEP_ENV: Available to only this step
         run: |
             echo "WF_ENV: ${WF_ENV}"
+            echo "JF_ENV: ${JOB_ENV}"
+            echo "STEP_ENV: ${STEP_ENV}"
   log-default-env:
     runs-on: ubuntu-latest
     steps:
       - name: Default Env Variables #checkout: https://docs.github.com/en/actions/learn-github-actions/variables#default-environment-variables
         run: |
-            echo "GITHUB_WORKFLOW: ${GITHUB_WORKFLOW}"
-            echo "GITHUB_WORKSPACE: ${GITHUB_WORKSPACE}"
-            echo "WF_ENV: ${WF_ENV}"
+            echo "GITHUB_WORKFLOW: ${ GITHUB_WORKFLOW }"
+            echo "GITHUB_WORKSPACE: ${ GITHUB_WORKSPACE }"
+            echo "WF_ENV: ${ WF_ENV }"
