--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,7 +1,8 @@
 name: ENV variable
 on: push
 env: #custom env variable key
-  WF_ENV: Available to all jobs 
+  #WF_ENV: Available to all jobs 
+  WF_ENV: ${{ secrets.WF_ENV }}
 
 jobs:
   log-env:
