--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -2,7 +2,7 @@ name: ENV variable
 on: push
 env: #custom env variable key
   #WF_ENV: Available to all jobs 
-  WF_ENV: ${{ secrets.WF_ENV }}
+  WF_ENV: ${{ secrets.WF_ENVS }}
 
 jobs:
   log-env:
