--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -4,7 +4,28 @@ env: #custom env variable key
   #WF_ENV: Available to all jobs 
   WF_ENV: ${{ secrets.WF_ENV }}
 
-jobs:
+jobs:  
+  create_random_file:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create random Files
+        run: |
+          pwd 
+          ls -a
+          git init
+          git remote add origin "https://$GITHUB_ACTOR:{{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
+          git config --global user.email "my-bot@bot.com"
+          git config --global user.name "my-bot"
+          git fetch
+          git Checkout master
+          git branch --set-upstream-to=origin/master
+          git pull
+          ls -a
+          echo $RANDOM >> random.txt
+          ls -a
+          git add -A
+          git commit -m"Added random file"
+          git push
   create_issue: #copied from https://docs.github.com/en/actions/security-guides/automatic-token-authentication
     runs-on: ubuntu-latest
     permissions:
