--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -17,8 +17,8 @@ jobs:
           git config --global user.email "my-bot@bot.com"
           git config --global user.name "my-bot"
           git fetch
-          git Checkout master
-          git branch --set-upstream-to=origin/master
+          git Checkout develop
+          git branch --set-upstream-to=origin/develop
           git pull
           ls -a
           echo $RANDOM >> random.txt
