--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -5,27 +5,38 @@ env: #custom env variable key
   WF_ENV: ${{ secrets.WF_ENV }}
 
 jobs:  
-  create_random_file:
+
+  decrypt:
     runs-on: ubuntu-latest
     steps:
-      - name: Create random Files
-        run: |
-          pwd 
-          ls -a
-          git init
-          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
-          git config --global user.email "my-bot@bot.com"
-          git config --global user.name "my-bot"
-          git fetch
-          git checkout develop
-          git branch --set-upstream-to=origin/develop
-          git pull
-          ls -a
-          echo $RANDOM >> random.txt
-          ls -a
-          git add -A
-          git commit -m"Added random file"
-          git push
+      - uses: actions/checkout@v1
+      - name: Decrypt File
+        run: gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secret.json secrets.json.gpg
+        env: 
+          PASSPHRASE: ${{ secrets.PASSPHRASE }}
+      - name: Print Contents of the File
+        run: cat $HOME/secret.json
+  #create_random_file:
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #    - name: Create random Files
+  #      run: |
+  #        pwd 
+  #        ls -a
+  #        git init
+  #        git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
+  #        git config --global user.email "my-bot@bot.com"
+  #        git config --global user.name "my-bot"
+  #        git fetch
+  #        git checkout master
+  #        git branch --set-upstream-to=origin/master
+  #        git pull
+  #        ls -a
+  #        echo $RANDOM >> random.txt
+  #        ls -a
+  #        git add -A
+  #        git commit -m"Added random file"
+  #        git push
   create_issue: #copied from https://docs.github.com/en/actions/security-guides/automatic-token-authentication
     runs-on: ubuntu-latest
     permissions:
