--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -9,8 +9,10 @@ jobs:
   decrypt:
     runs-on: ubuntu-latest
     steps:
+      #using github action checkout version1 to checkout the repo files to the current working directory
       - uses: actions/checkout@v1
       - name: Decrypt File
+      #quiet enables to operation to be quiet without putting any logs, on batch yes ie, takes inputs automatically
         run: gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secret.json secrets.json.gpg
         env: 
           PASSPHRASE: ${{ secrets.PASSPHRASE }}
