--- a/.github/workflows/contexts.yml
+++ b/.github/workflows/contexts.yml
@@ -1,14 +1,12 @@
 name: Context testing
-on: [push, pull_request]
+on: push
 
 jobs:
   dump_contexts_to_log:
-    runs-on: ubuntu-latest    
+    runs-on: ubuntu-latest 
+    #refer github context dump to see this event   
     if: github.event_name == 'push'
     steps:
-      - name: Dump GitHub context
-        id: github_context_step
-        run: echo '${{ toJSON(github) }}'
       - name: Dump GitHub context Failure
         id: github_context_step
         run: ecco '${{ toJSON(github) }}'
