--- a/.github/workflows/matrix1.yml
+++ b/.github/workflows/matrix1.yml
@@ -5,12 +5,14 @@ jobs:
   node-version:
     strategy:
       matrix:
+        #the jobs runs 9 times
+        os: [macos-latest, ubuntu-latest, windows-latest]
         node-version: [6,7,8]
       #if fail-fast set to true then the the subsequent versions don't execute if a version set up fails
       fail-fast: false
       #below line prevents parallel run
       #max-parallel: 0
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Log node version
         run: node -v
