--- a/.github/workflows/multiplecontainers.yml
+++ b/.github/workflows/multiplecontainers.yml
@@ -15,6 +15,6 @@ jobs:
           - "27017:27017"
     steps:
       - name: Post a User
-        run: 'curl -X POST http://localhost:3001/api/user -H "Content-Type: application/json" -d "{\"username\": \"hello\", \"address\":\"avbn"}"'
+        run: 'curl -X POST http://localhost:3001/api/user -H "Content-Type: application/json" -d "{"username": "hello", "address": "avbn"}"'
       - name: Get Users
         run: curl http://localhost:3001/api/users
