--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,5 +1,6 @@
 name: ENV variable
-on: push
+#on: push
+on: pull_request
 env: #custom env variable key
   #WF_ENV: Available to all jobs 
   WF_ENV: ${{ secrets.WF_ENV }}
