--- a/.github/workflows/multiplecontainers.yml
+++ b/.github/workflows/multiplecontainers.yml
@@ -2,6 +2,24 @@ name: Multiplecontainers
 on: push
 
 jobs:
+  docker-steps:
+    runs-on: ubuntu-latest
+    container:
+      image: node:10.18.0-jessie
+    steps:
+      - name: log node version
+        run: node -v
+      - name: step with docker
+        uses: docker://node:12.14.1-alpine3.10
+        with:
+          entrypoint: "bin/echo"
+          args: "Hello World!!!"
+      - name: Log node version
+        uses: docker://node:12.14.1-alpine3.10
+        with:
+          #type -a node to get he below path, since yml no need for "" for path
+          entrypoint: /usr/local/bin/node
+          args: -v
   node-dockers:
     runs-on: ubuntu-latest
     services:
